# otter

./: .gitignore  CMakeLists.txt  README.md  build.sh  run_tests.sh
docs/: how.html  index.html  ot_context.html  ot_packets.html  prelims.html  style.css
docs/prelims/: ht.html  tkl.html
examples/: CMakeLists.txt  client_example.c
include/: ht.h  ot_client.h  ot_context.h  ot_packet.h  ot_server.h  otfile_utils.h  test_include.h  tk.h
src/: CMakeLists.txt  ht.c  main.c  ot_client.c  ot_context.c  ot_packet.c  ot_server.c  ot_srv.c  otfile_utils.c  test_include.c  tk.c
tests/: CMakeLists.txt  test_cli_runtime.c  test_cli_runtime.c.old  test_client.c  test_pkt.c  test_srv.c  test_srv_runtime.c
tests/files/: test.ot
tests/include/: testing_utils.h
